[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemies/rammer/Rammer.gd" type="Script" id=1]
[ext_resource path="res://models/rammer.tres" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/powerups/Powerup.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.0283135
height = 0.124508

[sub_resource type="Animation" id=3]
resource_name = "blowback"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShipMesh:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 90, -0.25, 0, 0.108094, 347, 46, -0.25, 0, 0.231652, 28, 90, -0.0830877, 4, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShipMesh:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.0958107, 1223, 37.8209, -0.25, 0, 0.218316, 73.1791, 180, -0.236455, -160, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShipMesh:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.0947578, 1099, -133.735, -0.25, 0, 0.247796, 61.7349, 0, -0.0946692, -17, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[sub_resource type="CylinderShape" id=4]
height = 1.0

[node name="EnemyRammer" type="Area" groups=["enemies"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
behaviour = 3
health = 10
collision_damage = 50
upgrade = ExtResource( 4 )

[node name="ShipMesh" type="MeshInstance" parent="."]
transform = Transform( -0.0159076, -0.00107319, -1.58897e-06, -1.85448e-06, 2.55436e-05, -0.00999997, 0.00171711, -0.00994221, -2.55205e-05, 0, 0, -0.02 )
mesh = ExtResource( 2 )

[node name="ShipCollision" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0.01, -0.02 )
shape = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blowback = SubResource( 3 )

[node name="Spinup" type="Timer" parent="."]

[node name="TargetPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100 )

[node name="DetectionArea" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
shape = SubResource( 4 )
disabled = true

[connection signal="timeout" from="Spinup" to="." method="_on_spinup_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
